--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RUG Remix</title>
 
-    <link rel="stylesheet" type="text/css" href="css/estilos.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/estilos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -16,7 +16,34 @@
 
   <div class="header">
     
-    <h1 class="txtHeader">R<span>andom</span>U<span>ser</span>G<span>enerator</span> Remix</h1>
+    <h1 class="txtHeader col-7">R<span>andom</span>U<span>ser</span>G<span>enerator</span> Remix</h1>
+
+    <label for="selNat">Nacionalidad:</label>
+    <select name="selNat" class="col-5">
+
+      <option value="&au">Australia</option></div>
+      <option value="&br">Brasil</option></div>
+      <option value="&ca">Canada</option></div>
+      <option value="&ch">Suiza</option></div>
+      <option value="&de">Alemania</option></div>
+      <option value="&dk">Dinamarca</option></div>
+      <option value="&es">España</option></div>
+      <option value="&fi">Finlandia</option></div>
+      <option value="&fr">Francia</option></div>
+      <option value="&gb">Gran Bretaña</option></div>
+      <option value="&ie">Irlanda</option></div>
+      <option value="&in">India</option></div>
+      <option value="&ir">Iran</option></div>
+      <option value="&mx">Mexico</option></div>
+      <option value="&nl">Paises Bajos</option></div>
+      <option value="&no">Noruega</option></div>
+      <option value="&nz">Nueva Zelanda</p></div>
+      <option value="&rs">Serbia</option></div>
+      <option value="&tr">Turquia</option></div>
+      <option value="&ua">Ucrania</option></div>
+      <option value="&us">Estados Unidos</option></div>
+
+      </select>
 
   </div>  
     
@@ -57,7 +84,7 @@
   </div>
 
   
-  <script src="js/funciones.js"></script>
+  <script src="JS/funciones.js"></script>
 
 </body>
 </html>
